<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geo Hero</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/1033173712</string>

    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3272133045088079/2153833944</string>
    <string name="command_find">Find:</string>
    <string name="errors">Mistakes:</string>
    <string name="time">Time:</string>
    <string name="game_finished">Game finished!</string>
    <string name="toast_superb">Superb!!!</string>
    <string name="new_game">New game</string>
    <string name="exit">Close</string>
    <string name="loading">Game is loading ...</string>
    <string name="open_highscores">Highscores</string>
    <string name="dialog_name_title">Your name</string>
    <string name="dialog_name_msg">Congratulations!\nYou reached the highscores!\n\nPlease enter your name:</string>
    <string name="dialog_name_ok">OK</string>
    <string name="dialog_name_cancel">Cancel</string>
    <string name="dialog_name_edHint">Your name</string>
    <string name="dialog_name_toast1">Please enter your name! (min. 2 letters)</string>
    <string name="dialog_name_toast2">Created highscore entry!</string>
    <string name="points">Points:</string>
    <string name="dialog_name_msg2">You didn\'t reached the highscores! Try again!</string>
    <string name="dialog_name_title2">Sorry</string>
    <string name="bEurope">Europe</string>
    <string name="bAfrica">Africa</string>
    <string name="welcome_message">Welcome to Geo Hero!\nChoose a continent to start!</string>
</resources>
