<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.nrg.geohero.ActivityStart"
    android:background="#000000">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_world2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/imageView"
        android:scaleType="centerInside"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:alpha=".8"
        android:alwaysDrawnWithCache="false"
        android:animateLayoutChanges="false"
        android:animationCache="false"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:duplicateParentState="false"
        android:fadeScrollbars="false"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bEurope"
            android:id="@+id/bEurope"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="10dp"
            android:textIsSelectable="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bAfrica"
            android:id="@+id/bAfrica"
            android:layout_below="@+id/bEurope"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold|italic"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="24sp"/>
    </LinearLayout>

    <TextView
        android:text="@string/welcome_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="normal|bold|italic"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="26sp"
        android:fontFamily="sans-serif-condensed"/>

</RelativeLayout>
